Updates demo landing page.

--- a/static/css/demo.less
+++ b/static/css/demo.less
@@ -69,7 +69,9 @@
 }
 
 .demo-cols {
-    .grid_nested-col-group();
+    .u-respond-to-min(480px, {
+        .grid_nested-col-group();
+    });
 }
 
 .demo-col-12 {
